[gd_scene load_steps=12 format=2]

[ext_resource path="res://actors/Main/Main.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/background.png" type="Texture" id=2]
[ext_resource path="res://assets/font/Press_Start_2P/PressStart2P-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform sampler2D noise_texture;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	float noise = texture(noise_texture, UV + vec2(0.03, 0.1) * TIME).x >= 0.6 ? 1.0 : 0.0;
	color += (color.r > 0.5 || color.g > 0.5 || color.b > 0.5) && noise == 1.0 ? vec4(0.2, 0.2, 0.2, 0.0) : vec4(0.0);
	COLOR = color;
}

"

[sub_resource type="OpenSimplexNoise" id=2]

[sub_resource type="NoiseTexture" id=3]
noise = SubResource( 2 )

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 1 )
shader_param/noise_texture = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 18
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=8]
resource_name = "FadeIN"
tracks/0/type = "value"
tracks/0/path = NodePath("MarginContainer/CenterContainer/VBoxContainer/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.0588235 ), Color( 1, 1, 1, 0.184314 ), Color( 1, 1, 1, 0.447059 ), Color( 1, 1, 1, 0.611765 ), Color( 1, 1, 1, 0.843137 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Main" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
material = SubResource( 4 )
margin_right = 512.0
margin_bottom = 288.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 512.0
margin_bottom = 288.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 112.0
margin_top = 112.0
margin_right = 400.0
margin_bottom = 175.0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 288.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 5 )
text = "VEIL OF THE MIND"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 288.0
margin_bottom = 63.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer"]
margin_right = 288.0
margin_bottom = 21.0
custom_styles/separator = SubResource( 6 )
custom_constants/separation = 21
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 288.0
margin_bottom = 41.0
custom_styles/separator = SubResource( 6 )
custom_constants/separation = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/VBoxContainer"]
visible = false
margin_top = 52.0
margin_right = 288.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 7 )
text = "PRESS ANY BUTTON"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IntroTimer" type="Timer" parent="."]

[node name="TextTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIN = SubResource( 8 )

[connection signal="timeout" from="TextTimer" to="." method="_on_TextTimer_timeout"]
